Add AsyncBroadcastTask and related tests; implement BitmapUtil and notification action tests
- Introduced AsyncBroadcastTask for handling asynchronous broadcast tasks with proper execution and logging.
- Added unit tests for BitmapUtil to verify EXIF orientation mapping.
- Created comprehensive tests for notification actions, including identity and operations, ensuring correct behavior for replies and mark-read actions.
- Implemented tests for notification conversations to validate message rendering and privacy handling.
- Developed AppTaskExecutor tests to ensure task execution order, cancellation behavior, and callback execution.
- Added XmlBackupWriter tests to verify XML backup writing functionality.